a change for mobile view

--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
               <iframe
                 src="https://tictactoe-yilmaz.netlify.app/"
                 frameborder="0"
-                height="400px"
-                width="300px"
+                style="height: 400px; width: 300px;"
               ></iframe>
             </div>
             <br />
