--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <i class="fas fa-laptop"></i>
                 <a
                   class="nav-link"
-                  href="https://github.com/helef-cod"
+                  href="https://github.com/yilmazme?tab=repositories"
                   target="_blank"
                   >GitHub</a
                 ><i class="fab fa-github"></i>
