--- a/index.html
+++ b/index.html
@@ -272,6 +272,35 @@
                   style="height: 400px; width: 300px;"
               /></a>
             </div>
+            <br />
+            <div id="todo">
+              <div>
+                <p>
+                  <b
+                    ><h5>1) To Do App:</h5>
+                    A simple React To Do App. With local storage you
+                    <br />
+                    can actually use it to track your duties.
+                  </b>
+                  <br />
+                  <i
+                    ><a
+                      href="https://todoapp-yilmaz.netlify.app/"
+                      target="_blank"
+                    >
+                      To Do App</a
+                    ></i
+                  >
+                </p>
+              </div>
+              <a href="https://todoapp-yilmaz.netlify.app/" target="_blank">
+                <img
+                  class="img-thumbnail"
+                  src="./picture/todo.jpg"
+                  alt="todo_photo"
+                  style="height: 400px; width: 300px;"
+              /></a>
+            </div>
           </div>
           <div class="container-fluid" id="web">
             <h4>WEB:</h4>
