win car game added

--- a/index.html
+++ b/index.html
@@ -176,6 +176,34 @@
         <div class="container" id="works">
           <div class="container-fluid" id="games">
             <h4>GAMES:</h4>
+            <div id="wincar">
+              <div>
+                <p>
+                  
+                    <h5>1) Win Car Game:</h5>
+                    Would you change your previous choice <br>
+                    after computer open a false one? <br>
+                    Lets find out with the game that created<br>
+                    with JavaScript. Here is an ifarme of the <br>
+                    game.
+                  <br />
+                  <i
+                    ><a
+                      href="https://wincar-yilmaz.netlify.app/"
+                      target="_blank"
+                    >
+                      Win Car Game</a
+                    ></i
+                  >
+                </p>
+              </div>
+              <iframe
+                src="https://wincar-yilmaz.netlify.app/"
+                frameborder="0"
+                style="height: 400px; width: 300px;"
+              ></iframe>
+            </div>
+            <br>
             <div id="tictactoe">
               <div>
                 <p>
