some info updates

--- a/index.html
+++ b/index.html
@@ -103,26 +103,29 @@
               <p>
                 My name is Mehmet. I am a programming enthusiast. My coding
                 journey has begun with searching for Machine Learning. I am a
-                physics graduate from METU and term like Artificial Intelligence
+                physics graduate from METU. Term like Artificial Intelligence
                 was very attractive to me and still is. My primary goal was
                 learning some programming languages like Python and getting
-                involved in Machine Learning with my physics background. But I
-                think I have started from scratch :). I began with HTML, CSS;
+                involved in Machine Learning with my physics background but, I
+                think I have started from scratch. I began with HTML, CSS;
                 continue with JavaScript and you can guess the path after. I do
-                not regret; on the contrary, loved JavaScript and coding with it
-                began to be a hobby for me. Within JS libraries my favorite is
-                React. I can say I am very comfortable with React but I can not
-                say I am done with it, recently I have begun to learn newly
-                introduced hooks :). Still learning Python, C++ and some other
-                JavaScript libraries. Coding teaches me that very clearly. I can
-                never learn everything but I can reach my goals by using the
+                not regret, on the contrary loved JavaScript and coding with it
+                began to be a hobby for me. Within JS libraries or frameworks my favorite is
+                React. Using React, creating something with it is very amusing but, I now thinking about learning
+                React Native and taking my skills set one level up by be able to creating mobile apps.
+                 Still learning Python, C++ and some other
+                JavaScript libraries and frameworks. Coding teaches me that very clearly I can
+                never know everything but, I can reach my goals by using the
                 tools I have efficiently.
               </p>
               <hr class="my-4" />
               <p>
                 I know that I am going to change many things on this site very
                 soon because things I will learn is going to make me better or
-                at least they will change my mind. But all of us should start
+                at least they will change my mind about doing same things in better ways.
+                Also I konow there is always a better way but, sometimes pursuing and waiting
+                for that great solution cause a massive inertia of doing nothing. 
+                All of us should start
                 doing something we enjoy and not being afraid of not knowing
                 everything. Nowadays I enjoy coding with frontend libraries and
                 it is very fun.
@@ -130,8 +133,8 @@
               <p id="hiddenText">
                 On the site, below, you can see some of my works that are mostly
                 created with React. I know they are not very sophisticated and
-                there are not much yet but they are rich in terms of learning
-                the basics of frameworks. With the links, you can go to the
+                there are not much yet but, they are rich in terms of learning
+                the basics of frameworks. With the links you can go to the
                 Netlify pages and take a look at them. If you want to see source
                 code you can check my repositories on Github. For this purpose
                 link also will be somewhere.
