--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               </div>
               <a href="https://balls-yilmaz.netlify.app/" target="_blank">
                 <img
-                  class="img-thumbnail"
+                  class="img"
                   src="./picture/ball.jpg"
                   alt="checkers_photo"
                   style="height: 400px; width: 300px;"
@@ -281,7 +281,7 @@
               </div>
               <a href="https://checkers-yilmaz.netlify.app/" target="_blank">
                 <img
-                  class="img-thumbnail"
+                  class="img"
                   src="./picture/checkers.jpg"
                   alt="checkers_photo"
                   style="height: 400px; width: 300px;"
@@ -316,7 +316,7 @@
               </div>
               <a href="https://contactbasics.netlify.app/" target="_blank">
                 <img
-                  class="img-thumbnail"
+                  class="img"
                   src="./picture/contacts.jpg"
                   alt="contacts_photo"
                   style="height: 400px; width: 300px;"
@@ -345,7 +345,7 @@
               </div>
               <a href="https://todoapp-yilmaz.netlify.app/" target="_blank">
                 <img
-                  class="img-thumbnail"
+                  class="img"
                   src="./picture/todo.jpg"
                   alt="todo_photo"
                   style="height: 400px; width: 300px;"
@@ -357,9 +357,10 @@
                 
                   <h5>3) APOD:</h5>
                   <p>
-                   NASA Api APOD (Astronomy Photo of the Day) <br>
-                   Created with React Hooks. You can check the <br> 
-                   photo of the day in HD if ou want. <br>
+                   NASA Api APOD (Astronomy Photo of the Day) <br/>
+                   Created with React Hooks. You can check the <br/> 
+                   photo of the day in HD if ou want. 
+                  </br>
                   <i
                     ><a
                       href="https://apod-yilmaz.netlify.app/"
@@ -372,13 +373,14 @@
               </div>
               <a href="https://apod-yilmaz.netlify.app/" target="_blank">
                 <img
-                  class="img-thumbnail"
+                  class="img"
                   src="./picture/apod.jpg"
-                  alt="todo_photo"
+                  alt="apod_photo"
                   style="height: 400px; width: 300px;"
               /></a>
             </div>
           </div>
+          <br>
           <div class="container-fluid" id="web">
             <h4>WEB:</h4>
             <div id="school">
@@ -490,7 +492,7 @@
             </div>
             <a href="https://yilmazme.blogspot.com/" target="_blank">
               <img
-                class="img-thumbnail"
+                class="img"
                 src="./picture/blog.jpg"
                 alt="blog_photo"
                 style="height: 400px; width: 300px;"
