some css adjustment

--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
               </div>
               <a href="https://balls-yilmaz.netlify.app/" target="_blank">
                 <img
-                  class="img"
+                  class="img-fluid"
                   src="./picture/ball.jpg"
                   alt="checkers_photo"
-                  style="height: 400px; width: 300px;"
+                  style="width: 300px; height: auto;"
               /></a>
             </div>
             <br />
@@ -281,10 +281,10 @@
               </div>
               <a href="https://checkers-yilmaz.netlify.app/" target="_blank">
                 <img
-                  class="img"
+                  class="img-fluid"
                   src="./picture/checkers.jpg"
                   alt="checkers_photo"
-                  style="height: 400px; width: 300px;"
+                  style="width: 300px; height: auto;"
               /></a>
             </div>
           </div>
@@ -316,10 +316,10 @@
               </div>
               <a href="https://contactbasics.netlify.app/" target="_blank">
                 <img
-                  class="img"
+                  class="img-fluid"
                   src="./picture/contacts.jpg"
                   alt="contacts_photo"
-                  style="height: 400px; width: 300px;"
+                  style="width: 300px; height: auto;"
               /></a>
             </div>
             <br />
@@ -345,10 +345,10 @@
               </div>
               <a href="https://todoapp-yilmaz.netlify.app/" target="_blank">
                 <img
-                  class="img"
+                  class="img-fluid"
                   src="./picture/todo.jpg"
                   alt="todo_photo"
-                  style="height: 400px; width: 300px;"
+                  style="width: 300px; height: auto;"
               /></a>
             </div>
             <br>
@@ -373,10 +373,10 @@
               </div>
               <a href="https://apod-yilmaz.netlify.app/" target="_blank">
                 <img
-                  class="img"
+                  class="img-fluid"
                   src="./picture/apod.jpg"
                   alt="apod_photo"
-                  style="height: 400px; width: 300px;"
+                  style="width: 300px; height: auto;"
               /></a>
             </div>
           </div>
@@ -492,10 +492,10 @@
             </div>
             <a href="https://yilmazme.blogspot.com/" target="_blank">
               <img
-                class="img"
+                class="img-fluid"
                 src="./picture/blog.jpg"
                 alt="blog_photo"
-                style="height: 400px; width: 300px;"
+                style="width: 300px; height: auto;"
             /></a>
           </div>
           <br />
