some typo fixed

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                   <p>
                    NASA Api APOD (Astronomy Photo of the Day) <br/>
                    Created with React Hooks. You can check the <br/> 
-                   photo of the day in HD if ou want. 
+                   photo of the day in HD if you want. 
                   </br>
                   <i
                     ><a
