some info updated

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
                     Amateur Writer
                   </h6>
                   <p class="card-text">
-                    JavaScript, React, jQuery, HTML, CSS, JSON, CanvasJS, Bootstrap,
-                    Python, Node.JS, Expess
+                    JavaScript, React, jQuery, HTML, CSS,
+                    Python, Node.JS, ExpessJS,
+                    CanvasJS, Bootstrap
                   </p>
                 </div>
 
@@ -78,14 +79,19 @@
                 in
                 Machine Learning with my physics background. Back then I was not so familiar with programming and did
                 not
-                know where to start. I began with HTML, CSS and continue with JavaScript. I was fascinated by the power
+                know where to start. So I took the hard way, I began with HTML, CSS and continue with JavaScript. I was
+                fascinated by the power
                 of
-                JavaScript on the web and coding with JavaScript began to be a hobby for me. Within JS' libraries or
-                frameworks, my favorite is React. Using React, creating something with it is very amusing but, now I
-                thinking about learning React Native and taking my skills set one level up by being able to create
-                mobile
-                apps. Besides still learning Python, C++ and some other
-                JavaScript's libraries and frameworks. While coding I realize that very clearly: Just watching tutorials
+                JavaScript on the web and coding with JavaScript began to be a hobby for me. Created many static sites
+                and application
+                with plain JavaScript, then with React and jQuery. After learning Node.JS and Express I built my first
+                full stack
+                site with MongoDB as data base. This is my brief coding journey. I wanted to learn Python but end up
+                being
+                MERN
+                Stack developer. Still learning Python and some other
+                JavaScript's libraries and frameworks. While coding I realize that very clearly: Just following
+                tutorials
                 and try to learn all new technologies is not the best way to understand programming. That is why I start
                 coding this site and the works you can see below.
               </p>
@@ -106,16 +112,16 @@
                 </p>
                 <p>
                   On the site, below, you can see some of my works that are mostly
-                  created with React. I know they are not very sophisticated and
+                  built with React. I know they are not very sophisticated and
                   there are not much yet but, they are rich in terms of learning
                   the basics of frameworks. With the links you can go to the
-                  Netlify pages and take a look at them. If you want to see source
+                  Netlify or Heroku pages and take a look at them. If you want to see source
                   code you can check my repositories on Github. For this purpose
                   link also will be somewhere.
                   <br />
                   <br />
                   Lastly, I want to talk about this site. I created it with old
-                  fashion by using HTML, CSS, JS and Bootstrap. I could create it
+                  fashion by using HTML, CSS, JS and Bootstrap. I could build it
                   with React and it would be much easier but, I thought my first
                   portfolio site should be in a classical way.
                 </p>
@@ -129,15 +135,15 @@
             </div>
             <div class="col-md-2 text-center">
               <nav class="nav flex-column">
+                <a class="nav-link" href="#web">WEB</a>
+                <i class="fas fa-laptop"></i>
                 <a class="nav-link" href="#games">Games</a><i class="fas fa-gamepad"></i>
                 <a class="nav-link" href="#apps">Apps</a>
                 <i class="fas fa-tablet-alt"></i>
-                <a class="nav-link" href="#web">WEB</a>
-                <i class="fas fa-laptop"></i>
                 <a class="nav-link" href="https://github.com/yilmazme?tab=repositories" target="_blank">GitHub</a><i
                   class="fab fa-github"></i>
-                <a class="nav-link" href="#literature">Literature</a>
-                <i class="fab fa-blogger"></i>
+                <!-- <a class="nav-link" href="#literature">Literature</a>
+                <i class="fab fa-blogger"></i> -->
               </nav>
             </div>
           </div>
@@ -146,6 +152,47 @@
 
       <div class="container-fluid">
         <div class="container" id="works">
+          <br>
+          <div class="container-fluid" id="web">
+            <h4>WEB:</h4>
+            <div class="row">
+              <div class="col-sm-4">
+                <h5>1) Aile Ol-Aile Bul:</h5>
+                <p>
+                  A Web site for pets. It is a full stack project. Created with NodeJS and Express.
+                  For database MongoDB and for view engine Handlebars are used. Authentication and authorization
+                  are implemented with PassportJS. <br>
+                  <a href="https://ailebul.herokuapp.com/" target="_blank">
+                    Aile Bul</a>
+                </p>
+              </div>
+              <div class="col-sm-4"></div>
+              <div class="col-sm-4"> <a href="https://ailebul.herokuapp.com/" target="_blank">
+                  <img class="img-fluid" src="./picture/aile.jpg" alt="evreka_photo"
+                    style="width: 300px; height: auto;" /></a>
+              </div>
+
+            </div>
+            <br>
+            <div class="row">
+              <div class="col-sm-4">
+                <h5>2) Evreka:</h5>
+                <p>
+                  Rather than a complete web page it is for tracking records and
+                  take actions. Created with React. Modals, Leaflet maps and React-player used. <br>
+                  <a href="https://evreka-yilmaz.netlify.app/" target="_blank">
+                    Evreka</a>
+                </p>
+              </div>
+              <div class="col-sm-4"></div>
+              <div class="col-sm-4"> <a href="https://evreka-yilmaz.netlify.app/" target="_blank">
+                  <img class="img-fluid" src="./picture/evreka.jpg" alt="evreka_photo"
+                    style="width: 300px; height: auto;" /></a>
+              </div>
+
+            </div>
+            <br>
+          </div>
           <div class="container-fluid" id="games">
             <h4>GAMES:</h4>
             <div class="row">
@@ -312,54 +359,13 @@
                     style="width: 300px; height: auto;" /></a>
               </div>
             </div>
-          </div>
-          <br>
-          <div class="container-fluid" id="web">
-            <h4>WEB:</h4>
-            <div class="row">
-              <div class="col-sm-4">
-                <h5>1) Aile Ol-Aile Bul:</h5>
-                <p>
-                  A Web site for pets. It is a full stack project. Created with NodeJS and Express.
-                  For database MongoDB and for view engine Handlebars are used. Authentication and authorization
-                  are implemented with PassportJS. <br>
-                  <a href="https://ailebul.herokuapp.com/" target=" _blank">
-                    Aile Bul</a>
-                </p>
-              </div>
-              <div class="col-sm-4"></div>
-              <div class="col-sm-4"> <a href="https://ailebul.herokuapp.com/" target=" _blank">
-                  <img class="img-fluid" src="./picture/aile.jpg" alt="evreka_photo"
-                    style="width: 300px; height: auto;" /></a>
-              </div>
-
-            </div>
-            <br>
-            <div class="row">
-              <div class="col-sm-4">
-                <h5>2) Evreka:</h5>
-                <p>
-                  Rather than a complete web page it is for tracking records and
-                  take actions. Created with React. Modals, Leaflet maps and React-player used. <br>
-                  <a href="https://evreka-yilmaz.netlify.app/" target=" _blank">
-                    Evreka</a>
-                </p>
-              </div>
-              <div class="col-sm-4"></div>
-              <div class="col-sm-4"> <a href="https://evreka-yilmaz.netlify.app/" target=" _blank">
-                  <img class="img-fluid" src="./picture/evreka.jpg" alt="evreka_photo"
-                    style="width: 300px; height: auto;" /></a>
-              </div>
-
-            </div>
             <br>
           </div>
         </div>
+
       </div>
 
-
-      <br />
-      <div class="container-fluid">
+      <!-- <div class="container-fluid">
         <div class="container" id="literature">
           <h4>Literature:</h4>
           <div class="container-fluid" id="story">
@@ -397,13 +403,13 @@
 
           <br />
         </div>
-      </div>
+      </div> -->
       <br>
       <div class="container-fluid">
         <div class="container-fluid" id="progress">
           <h4>JavaScript:</h4>
           <div class="progress">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 87%;" aria-valuenow="10"
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%;" aria-valuenow="10"
               aria-valuemin="0" aria-valuemax="100"></div>
           </div>
           <h4>HTML:</h4>
