some typo fixed

--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
                 in
                 Machine Learning with my physics background. Back then I was not so familiar with programming and did
                 not
-                know where to start. So I took the hard way, I began with HTML, CSS and continue with JavaScript. I was
+                know where to start. So I took the hard way; I began with HTML, CSS and continue with JavaScript. I was
                 fascinated by the power
                 of
                 JavaScript on the web and coding with JavaScript began to be a hobby for me. Created many static sites
                 and application
                 with plain JavaScript, then with React and jQuery. After learning Node.JS and Express I built my first
                 full stack
-                site with MongoDB as data base. This is my brief coding journey. I wanted to learn Python but end up
+                sites with MongoDB as database. This is my brief coding journey. I wanted to learn Python but end up
                 being
                 MERN
-                Stack developer. Still learning Python and some other
+                Stack developer candidate. Still learning Python and some other
                 JavaScript's libraries and frameworks. While coding I realize that very clearly: Just following
                 tutorials
                 and try to learn all new technologies is not the best way to understand programming. That is why I start
@@ -104,9 +104,9 @@
                 <p>
                   I know that I am going to change many things on this site very soon because things I will learn is
                   going
-                  to make me better or at least they will change my mind about doing the same things but in better ways.
-                  I
-                  know there is always a better way but, sometimes pursuing and waiting for that great answer causes
+                  to make me better or at least they will change my mind about getting old results but in better ways.
+                  Always there would be a better way to start coding but, sometimes pursuing and waiting for that great
+                  answer causes
                   massive inertia of doing nothing. All of us should start doing something we enjoy and not being afraid
                   to get our hands dirty.
                 </p>
@@ -115,12 +115,12 @@
                   built with React. I know they are not very sophisticated and
                   there are not much yet but, they are rich in terms of learning
                   the basics of frameworks. With the links you can go to the
-                  Netlify or Heroku pages and take a look at them. If you want to see source
+                  Netlify and Heroku hosted pages and take a look at them. If you want to see source
                   code you can check my repositories on Github. For this purpose
-                  link also will be somewhere.
+                  link is available at the top right navigation.
                   <br />
                   <br />
-                  Lastly, I want to talk about this site. I created it with old
+                  Lastly, I want to say something about this site. I created it with old
                   fashion by using HTML, CSS, JS and Bootstrap. I could build it
                   with React and it would be much easier but, I thought my first
                   portfolio site should be in a classical way.
