--- a/index.html
+++ b/index.html
@@ -176,7 +176,26 @@
             <br>
             <div class="row">
               <div class="col-sm-4">
-                <h5>2) Evreka:</h5>
+                <h5>2) My Blog:</h5>
+                <p>
+                  I built this blog for myself. I used NodeJS, Express and MongoDB(Mongoose) at the back-end. As view
+                  engine
+                  Handlebars was my choice and you can see some bootstrap's help at the front-end<br>
+                  <a href="https://yilmazblog.herokuapp.com/" target="_blank">
+                    My Blog</a>
+                </p>
+              </div>
+              <div class="col-sm-4"></div>
+              <div class="col-sm-4"> <a href="https://yilmazblog.herokuapp.com/" target="_blank">
+                  <img class="img-fluid" src="./picture/blog.jpg" alt="blog_photo"
+                    style="width: 300px; height: auto;" /></a>
+              </div>
+
+            </div>
+            <br>
+            <div class="row">
+              <div class="col-sm-4">
+                <h5>3) Evreka:</h5>
                 <p>
                   Rather than a complete web page it is for tracking records and
                   take actions. Created with React. Modals, Leaflet maps and React-player used. <br>
