warning about heroku free dyno added

--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
                 <p>
                   A Web site for pets. It is a full stack project. Created with NodeJS and Express.
                   For database MongoDB and for view engine Handlebars are used. Authentication and authorization
-                  are implemented with PassportJS. <br>
+                  are implemented with PassportJS.
+                  <br>
+                  <br>
+                  <i>NOTE: The application runs on free dyno, so loading will be slow.</i>
                   <a href="https://ailebul.herokuapp.com/" target="_blank">
                     Aile Bul</a>
                 </p>
@@ -180,7 +183,10 @@
                 <p>
                   I built this blog for myself. I used NodeJS, Express and MongoDB(Mongoose) at the back-end. As view
                   engine
-                  Handlebars was my choice and you can see some bootstrap's help at the front-end<br>
+                  Handlebars was my choice and you can see some bootstrap's help at the front-end.
+                  <br>
+                  <br>
+                  <i>NOTE: The application runs on free dyno, so loading will be slow.</i>
                   <a href="https://yilmazblog.herokuapp.com/" target="_blank">
                     My Blog</a>
                 </p>
