dome typo fixed

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <div class="col-sm-4">
                 <h5>2) My Blog:</h5>
                 <p>
-                  I built this blog for myself. I used NodeJS, Express and MongoDB(Mongoose) at the back-end. As view
+                  I built this blog for myself. I used NodeJS, Express and MongoDB(Mongoose) at the back-end. For view
                   engine
                   Handlebars was my choice and you can see some bootstrap's help at the front-end.
                   <br>
