--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/5b86abbeb3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <link rel="icon" href="./picture/iconBlue.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./favicon_io/site.webmanifest">
     <title>Mehmet Yılmaz</title>
   </head>
 
